--- a/index.html
+++ b/index.html
@@ -3,89 +3,84 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Prestige Griffin – Home</title>
-  <meta name="description" content="Prestige Griffin empowers innovation in finance, technology, and defense.">
-  <meta property="og:title" content="Prestige Griffin – Innovation in Finance, Tech & Defense">
-  <meta property="og:description" content="Partnering with government and private sector leaders to deliver secure, scalable, and strategic solutions.">
-  <meta property="og:image" content="URL_TO_YOUR_LOGO_OR_PREVIEW_IMAGE">
+  <title>Prestige Griffin</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #2c0c0b;
-      color: #e2ba4c;
-      background-image: radial-gradient(circle, rgba(117,20,20,0.2) 0%, rgba(0,0,0,0.9) 100%);
+      font-family: 'Inter', sans-serif;
+      background-color: #0b0b0b;
+      color: #f5e8c7;
+      overflow-x: hidden;
     }
     header {
       display: flex;
-      align-items: center;
       justify-content: space-between;
+      align-items: center;
       padding: 1rem 2rem;
-      background-color: #2c0c0b;
+      background-color: rgba(15, 15, 15, 0.95);
+      position: sticky;
+      top: 0;
+      z-index: 999;
       border-bottom: 1px solid #e2ba4c;
     }
     nav a {
       color: #e2ba4c;
-      margin-left: 1.5rem;
+      margin-left: 2rem;
       text-decoration: none;
-      font-weight: 500;
+      font-weight: 600;
       transition: color 0.3s ease;
     }
     nav a:hover {
-      color: #f5d88c;
+      color: #fff6d4;
     }
-    .button {
-      background-color: #e2ba4c;
-      color: #111;
-      padding: 0.75rem 1.25rem;
-      border-radius: 999px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: all 0.3s ease;
-      display: inline-block;
-    }
-    .button:hover {
-      background-color: #d4a534;
-      color: #000;
-    }
-    .button-outline {
-      background-color: #000;
-      color: #e2ba4c;
-      border: 2px solid #e2ba4c;
-    }
-    .button-outline:hover {
-      background-color: #2c0c0b;
-      color: #f5d88c;
-    }
-    main {
-      min-height: 100vh;
+    .hero {
+      height: 100vh;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      padding: 4rem 2rem;
+      text-align: center;
+      background: radial-gradient(circle at center, #2c0c0b 0%, #000 100%);
+    }
+    .hero h1 {
+      font-size: 3.5rem;
+      color: #e2ba4c;
+      margin-bottom: 1rem;
+      animation: fadeInDown 1s ease-out;
+    }
+    .hero p {
+      font-size: 1.25rem;
+      color: #f0e6c0;
+      max-width: 800px;
+      animation: fadeInUp 1.2s ease-out;
+    }
+    .section {
+      padding: 5rem 2rem;
       max-width: 1080px;
       margin: auto;
     }
-    section {
-      width: 100%;
-    }
-    h1 {
-      font-size: clamp(2.5rem, 5vw, 3.5rem);
-      margin-bottom: 1rem;
+    .section h2 {
+      font-size: 2.5rem;
       color: #e2ba4c;
-      animation: fadeInDown 1s ease-out;
-    }
-    h2 {
-      font-size: 2.25rem;
       text-align: center;
-      color: #e2ba4c;
-      animation: fadeInUp 1.8s ease-out;
+      margin-bottom: 1.5rem;
     }
-    p {
-      font-size: 1.1rem;
-      line-height: 1.7em;
+    .section p {
       color: #f5d88c;
+      font-size: 1.1rem;
+      line-height: 1.8em;
+      text-align: center;
+      max-width: 900px;
+      margin: auto;
+    }
+    .glass {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 16px;
+      padding: 2rem;
+      margin: 2rem 0;
+      backdrop-filter: blur(8px);
     }
     @keyframes fadeInDown {
       from { opacity: 0; transform: translateY(-40px); }
@@ -99,40 +94,47 @@
 </head>
 <body>
   <header>
-    <div>
-      <img src="prestige_griffin_logo_maroon.png" alt="Prestige Griffin logo with maroon and gold styling" style="max-height:80px;">
-    </div>
+    <div><img src="prestige_griffin_logo_maroon.png" alt="Prestige Griffin Logo" style="height:60px;"></div>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="contact.html">Contact</a>
+      <a href="#">Home</a>
+      <a href="#finance">Finance</a>
+      <a href="#tech">Technology</a>
+      <a href="#defense">Defense</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <main>
-    <section style="text-align:center; padding-top: 4rem;">
-      <h1>Prestige Griffin</h1>
-      <p style="font-size:1.25rem; max-width:800px; margin:auto; animation:fadeInDown 1.2s ease-out;">
-        Empowering Innovation in Finance, Technology & Defense
-      </p>
-      <p style="margin-top:1.5rem; font-size:1.05rem; animation:fadeInUp 1.4s ease-out;">
-        Partnering with government and private sector leaders to deliver secure, scalable, and strategic solutions.
-      </p>
-      <div style="margin-top:2.5rem; animation:fadeInUp 1.6s ease-out;">
-        <a href="services.html" class="button" style="margin: 0 1rem;">Explore Services</a>
-        <a href="contact.html" class="button button-outline" style="margin: 0 1rem;">Contact Us</a>
-      </div>
-    </section>
+  <section class="hero">
+    <h1>Prestige Griffin</h1>
+    <p>Empowering Innovation in Finance, Technology & Defense</p>
+  </section>
 
-    <section style="margin-top: 6rem;">
-      <h2>Who We Are</h2>
-      <p style="text-align:center; max-width:850px; margin:auto; padding-top:1rem;">
-        Prestige Griffin is a strategic consulting and development partner across three powerful verticals: 
-        <b>fintech and banking</b>, <b>technology and design</b>, and <b>arms and ammunition</b>.
-        We work with both government agencies and private sector leaders to help them innovate, operate securely, and scale intelligently.
-      </p>
-    </section>
-  </main>
+  <section id="finance" class="section glass">
+    <h2>Finance & Banking</h2>
+    <p>
+      Prestige Griffin connects ambitious ventures and visionary founders with elite capital partners. Our firm specializes in facilitating Series A fundraising through strategic investor matchmaking and financial structuring. <br><br>
+      We also provide exclusive access to Level 25 private banking services, tailored for ultra-high-net-worth individuals and institutional entities requiring discreet, sovereign-grade financial solutions.
+    </p>
+  </section>
+
+  <section id="tech" class="section glass">
+    <h2>Technology Consulting</h2>
+    <p>
+      From ideation to execution, Prestige Griffin engineers fintech products and neobanking platforms with speed and precision. We provide expertise in full-stack development, mobile and web banking, UI/UX design, and agile product management. <br><br>
+      Whether you’re building a prototype or scaling globally, we deliver the strategy, design, and technical execution to bring your digital vision to life.
+    </p>
+  </section>
+
+  <section id="defense" class="section glass">
+    <h2>Defense & Arms Advisory</h2>
+    <p>
+      Operating at the highest levels of discretion and compliance, Prestige Griffin facilitates confidential transactions between qualified buyers and certified defense suppliers. <br><br>
+      Our team connects clients with access to tactical equipment, weaponry, and military-grade logistics while ensuring every transaction is governed by integrity and security.
+    </p>
+  </section>
+
+  <footer id="contact" class="section" style="text-align:center;">
+    <p style="color:#888">© 2025 Prestige Griffin. All rights reserved.</p>
+  </footer>
 </body>
 </html>
