--- a/services.html
+++ b/services.html
@@ -2,82 +2,43 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Services – Prestige Griffin</title>
-  <meta name="description" content="Explore the full range of services offered by Prestige Griffin.">
+  <title>Services | Prestige Griffin</title>
   <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #2c0c0b;
-      color: #e2ba4c;
-      background-image: radial-gradient(circle, rgba(117,20,20,0.2) 0%, rgba(0,0,0,0.9) 100%);
-    }
-    header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 1rem 2rem;
-      background-color: #2c0c0b;
-      border-bottom: 1px solid #e2ba4c;
-    }
-    nav a {
-      color: #e2ba4c;
-      margin-left: 1.5rem;
-      text-decoration: none;
-      font-weight: 500;
-      transition: color 0.3s ease;
-    }
-    nav a:hover {
-      color: #f5d88c;
-    }
-    main {
-      max-width: 1080px;
-      margin: auto;
-      padding: 4rem 2rem;
-    }
-    h1 {
-      font-size: 2.75rem;
-      text-align: center;
-      margin-bottom: 2rem;
-    }
-    ul {
-      list-style: none;
-      padding: 0;
-      max-width: 800px;
-      margin: auto;
-    }
-    li {
-      background-color: rgba(255, 255, 255, 0.05);
-      padding: 1rem;
-      margin-bottom: 1rem;
-      border-left: 4px solid #e2ba4c;
-      color: #f5d88c;
-      font-size: 1.05rem;
-    }
+    body { margin: 0; font-family: 'Segoe UI', sans-serif; background: linear-gradient(to bottom, #7c0a02, #1a1a1a); color: #f0d9b5; }
+    header { background: radial-gradient(circle, #800000 0%, #1a0000 100%); text-align: center; padding: 60px 20px 40px; }
+    .logo { width: 180px; }
+    nav a { margin: 0 15px; text-decoration: none; color: #f0d9b5; font-weight: bold; border-bottom: 2px solid transparent; }
+    nav a:hover, nav a.active { border-color: #ffd700; }
+    .services { padding: 40px 20px; text-align: center; }
+    .service-card { background: #3d1a1a; border-radius: 12px; padding: 20px; margin: 20px auto; max-width: 500px; box-shadow: 0 10px 30px rgba(0,0,0,0.3); }
+    footer { text-align: center; padding: 20px; background: #120202; color: #999; }
   </style>
 </head>
 <body>
   <header>
-    <div>
-      <img src="prestige_griffin_logo_maroon.png" alt="Prestige Griffin logo" style="max-height:80px;">
-    </div>
+    <img src="PG.png" alt="Prestige Griffin Logo" class="logo" />
+    <h1>Our Services</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="services.html">Services</a>
+      <a href="services.html" class="active">Services</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-
-  <main>
-    <h1>Our Services</h1>
-    <ul>
-      <li><strong>Fintech Solutions</strong> – Core banking integrations, digital wallets, AML/KYC, and blockchain strategies.</li>
-      <li><strong>Tech & Product Design</strong> – UX/UI design, enterprise platforms, mobile apps, and web development.</li>
-      <li><strong>Defense Consulting</strong> – Secure systems architecture, surveillance technology, and strategic advisory.</li>
-      <li><strong>Cybersecurity</strong> – Threat modeling, penetration testing, zero-trust frameworks, and data protection protocols.</li>
-    </ul>
-  </main>
+  <section class="services">
+    <div class="service-card">
+      <h2>Finance & Banking</h2>
+      <p>Series A funding, elite investor access, and Level 25 banking for UHNWIs and institutions.</p>
+    </div>
+    <div class="service-card">
+      <h2>Technology Consulting</h2>
+      <p>End-to-end fintech development — neobanking, mobile apps, UX design, MVPs.</p>
+    </div>
+    <div class="service-card">
+      <h2>Defense & Arms Advisory</h2>
+      <p>Discreet arms brokerage and procurement for sovereign clients and defense contractors.</p>
+    </div>
+  </section>
+  <footer>&copy; 2025 Prestige Griffin. All rights reserved.</footer>
 </body>
 </html>
